challenge10/webdb-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webdb-deployment
  namespace: mhouas
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webdb
  template:
    metadata:
      labels:
        app: webdb
    spec:
      containers:
      - name: webdb
        image: mah5000/site_web:3.0.0
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: "100m"
            memory: "100Mi"
          limits:
            cpu: "200m"
            memory: "200Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: webdb-service
  namespace: mhouas
spec:
  type: ClusterIP
  selector:
    app: webdb
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
