challenge10/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mh-ingress
  namespace: mhouas

spec:
  rules:
    - host: webnodb.mhouas.net4255.luxbulb.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webnodb-service
                port:
                  number: 80
    - host: webdb.mhouas.net4255.luxbulb.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webdb-service
                port:
                  number: 80
